[package]
name = "onlyoomfs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
argon2 = "0.3"
rand = "0.8"
jsonwebtoken = "7"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }